2010-11-25  Marc Khouzam  <marc.khouzam@ericsson.com>

PR breakpoints/12217

	* breakpoint.c (is_marker_spec): Check for NULL.